--- a/HW1/homework 1 notebook.ipynb
+++ b/HW1/homework 1 notebook.ipynb
@@ -2,15 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7327387580875756 0.7770887149698589\n",
-      "-0.04794773197419977\n"
+      "1.0 1.0\n",
+      "3.0 3.0\n",
+      "[1.0, 1.0, 1.0, 1.0, 1.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 3.0, 3.0]\n",
+      "leopard was released on october 26, 2007 as the successor of tiger (version 10.4), and is available in two editions. akdjflajd\n",
+      "apple has released a small patch for the three most recent versions of safari running on os x yosemite, mavericks, and mountain lion. akdjflajd\n",
+      "the mountain lion release marks the second time apple has offered an incremental upgrade, rather than releasing a new cat entirely. akdjflajd\n",
+      "mac os x mountain lion installs in place, so you won't need to create a separate disk or run the installation off an external drive. akdjflajd\n",
+      "the fifth major update to mac os x, leopard, contains such a mountain of features - more than 300 by apple's count. akdjflajd\n",
+      "0.0\n"
      ]
     }
    ],
@@ -49,18 +56,28 @@
     "            j = wordId[word]\n",
     "            A[i][j]=A[i][j]+1\n",
     "\n",
+    "            \n",
+    "def sim_score_chebyshev(A,B):\n",
+    "    return np.amax(np.absolute(A-B))\n",
+    "def cheb_dis(A,B):\n",
+    "    return 1-sim_score_chebyshev(A,B)\n",
     "def simiarity_score(A,B):\n",
     "    return A.dot(B)/ (np.linalg.norm(A) * np.linalg.norm(B))\n",
     "def cos_dis(A,B):\n",
     "    return 1-simiarity_score(A,B)\n",
     "#6\n",
-    "W = [cos_dis(A[0],A[i]) for i in range(1,A.shape[0])]\n",
+    "W = [sim_score_chebyshev(A[0],A[i]) for i in range(1,A.shape[0])]\n",
     "\n",
     "\n",
     "#7\n",
     "W_sorted = sorted(W)\n",
     "print(W_sorted[0],W_sorted[1])\n",
+    "print(W_sorted[-1],W_sorted[-2])\n",
+    "print(W_sorted)\n",
     "\n",
+    "for i in range(len(W)):\n",
+    "    if W[i]==W_sorted[0]:\n",
+    "        print(sentences[i+1], 'akdjflajd')\n",
     "#8\n",
     "print(W_sorted[1]-W_sorted[2])"
    ]
